--- a/shoppingcart/src/assets/storestyles.css
+++ b/shoppingcart/src/assets/storestyles.css
@@ -434,7 +434,7 @@ h3 {
     color: #000000;
     position: relative;
 }
-#PartsTitle {
+.PartsTitle {
     text-align: left;
     font-size: 50px;
     font-weight: 900;
