--- a/shoppingcart/src/assets/storestyles.css
+++ b/shoppingcart/src/assets/storestyles.css
@@ -273,7 +273,7 @@ h3 {
     justify-content: space-around;
     margin-bottom: 25px;
 }
-.Pc {
+#Pc {
     width: 250px;
     background-repeat: no-repeat;
     z-index: 1;
