--- a/shoppingcart/src/assets/storestyles.css
+++ b/shoppingcart/src/assets/storestyles.css
@@ -273,7 +273,7 @@ h3 {
     justify-content: space-around;
     margin-bottom: 25px;
 }
-#Pc {
+.Pc {
     width: 250px;
     background-repeat: no-repeat;
     z-index: 1;
@@ -434,7 +434,7 @@ h3 {
     color: #000000;
     position: relative;
 }
-.PartsTitle {
+#PartsTitle {
     text-align: left;
     font-size: 50px;
     font-weight: 900;
