--- a/shoppingcart/src/assets/storestyles.css
+++ b/shoppingcart/src/assets/storestyles.css
@@ -255,7 +255,7 @@ h3 {
 .checkout-container {
     width: 100%;
     text-align: center;
-    background-image: URL("..\\images\\pc.png");
+    background-image: URL("src/images/pc.png");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: 900px;
