--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ h1{
     border: 3px solid teal;
     border-radius: 50px;
 }
+h2{
+    text-align: center;
+    color: teal;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-size:60px;
+    border: 3px solid teal;
+    border-radius: 50px;
+}
 .adventure{
     width: 350px;
     margin-top: 100px;
