--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1{
     border: 3px solid teal;
     border-radius: 50px;
 }
-h2{
+#h2{
     text-align: center;
     color: teal;
     font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
