--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 h2 {
-  text-align: center;
+  text-align: left;
   color: teal;
   font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   font-size:40px;
