--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h1 {
     font-size:60px;
     border: 3px solid teal;
     border-radius: 50px;
+    border-right: 3px solid #008080;
+    line-height: 3em;
 }
 
 .adventure {
