--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@media only screen and (max-width: 600px) {
+    /* Styles for screens smaller than 600px */
+}
 h1 {
     text-align: center;
     color: teal;
