--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@media only screen and (max-width: 600px) {
-    /* Styles for screens smaller than 600px */
-}
 h1 {
     text-align: center;
     color: teal;
@@ -145,4 +142,26 @@ p{
     box-sizing: content-box;
     margin-top: 180px;
     margin-left: 60px;
+}
+@media only screen and (max-width: 600px) 
+{
+    /* Styles for screens smaller than 600px */
+}
+h1 {
+    text-align: center;
+    color: teal;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-size:5px;
+    border: 3px solid teal;
+    border-radius: 50px;
+    border-right: 3px solid #008080;
+    line-height: 3em;
+}
+.adventure {
+    width: 50px;
+    margin-top: 100px;
+    margin-left: 100px;
+    border-radius: 20px;
+    border-style: ridge;
+    border-color: gray;
 }
