--- a/style.css
+++ b/style.css
@@ -158,14 +158,28 @@ p{
         line-height: 3em;
 }
     .adventure {
-        width: 80px;
+        width: 530px;
         margin-top: 100px;
         margin-left: 100px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
 }
-    .zoom{
-        zoom: 50%;
+    .center-image {
+        width: 530px;
+        margin-top: 10px;
+        margin-left: 100px;
+        border-radius: 60px;
+        border-style: ridge;
+        border-color: gray;
+}
+    .shopping {
+        width: 530px;
+        margin-top: 10px;
+        margin-left: 100px;
+        border-radius: 20px;
+        border-style: ridge;
+        border-color: gray;
+
 }
 }
