--- a/style.css
+++ b/style.css
@@ -156,22 +156,23 @@ p{
         line-height: 3em;
 }
     .adventure {
-        width: 470px;
+        width: 370px;
         margin-top: 100px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
 }
     .center-image {
-        width: 470px;
+        width: 370px;
         margin-top: 10px;
         border-radius: 60px;
         border-style: ridge;
         border-color: gray;
 }
     .shopping {
-        width: 470px;
+        width: 370px;
         margin-top: 10px;
+        margin-left: 2px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
