--- a/style.css
+++ b/style.css
@@ -156,26 +156,30 @@ p{
         line-height: 3em;
 }
     .adventure {
-        width: 340px;
+        width: 360px;
         margin-top: 100px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
 }
     .center-image {
-        width: 340px;
+        width: 360px;
         margin-top: 10px;
         border-radius: 60px;
         border-style: ridge;
         border-color: gray;
 }
     .shopping {
-        width: 340px;
+        width: 360px;
         margin-top: 10px;
-        margin-left: 2px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
-
+}
+    h2 {
+        text-align: left;
+        color: teal;
+        font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+        font-size:10px;
 }
 }
