--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ p{
     .shopping {
         width: 360px;
         margin-top: 12px;
+        margin-left: 10px;
         border-radius: 20px;
         border-style: ridge;
         border-color: gray;
