--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('images/home.jpg') no-repeat;
+    background: url('images/home.JPEG') no-repeat;
     background-size: contain;
     background-position: right;
 }
