--- a/style.css
+++ b/style.css
@@ -45,15 +45,10 @@ body {
 }
 
 .logo {
-    position: relative;
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
 
-}
-
-.navbar {
-    position: relative;
 }
 
 .navbar a {
@@ -72,7 +67,6 @@ body {
 }
 
 #menu-icon {
-    position: relative;
     font-size: 3.6rem;
     color: var(--text-color);
     cursor: pointer;
@@ -89,8 +83,8 @@ section {
     align-items: center;
     padding: 0 9%;
     background: url('images/home.png') no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: contain;
+    background-position: right;
 }
 
 .home-content {
@@ -98,11 +92,7 @@ section {
     z-index: 99;
 }
 
-
-
 .home-content h1 {
-    position: relative;
-    display: inline-block;
     font-size: 4.6rem;
     font-weight: 700;
     line-height: 1.3;
@@ -122,35 +112,9 @@ section {
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: .7px var(--main-color);
-    background-image: linear-gradient(var(--main-color), var(--main-color));
-    background-repeat: no-repeat;
-    -webkit-background-clip: text;
-    background-position: -33rem 0;
-}
-
-.home.show-animate .home-content .text-animate h3 {
-    animation: homeBgText 6s linear infinite;
-    animation-delay: 2s;
-}
-
-.home-content .text-animate h3::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    border-right: 2px solid var(--main-color);
-    z-index: -1;
-}
-
-.home.show-animate .home-content .text-animate h3::before {
-    animation: homeCursorText 6s linear infinite;
-    animation-delay: 2s;
 }
 
 .home-content p {
-    position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 4rem;
 }
@@ -287,7 +251,6 @@ section {
 }
 
 .heading {
-    position: relative;
     font-size: 5rem;
     margin-bottom: 3rem;
     text-align: center;
@@ -333,13 +296,10 @@ span {
 }
 
 .about-content h3 {
-    position: relative;
-    display: inline-block;
     font-size: 2.6rem;
 }
 
 .about-content p {
-    position: relative;
     font-size: 2rem;
     margin: 2rem 0 3rem;
 }
@@ -373,14 +333,11 @@ span {
 }
 
 .education-column .title {
-    position: relative;
-    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem 2rem;
 }
 
 .education-column .education-box {
-    position: relative;
     border-left: .2rem solid var(--main-color);
 }
 
@@ -451,12 +408,6 @@ span {
     background: var(--second-bg-color);
 }
 
-.skills h2 {
-    display: inline-block;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .skills .skills-row {
     display: flex;
     flex-wrap: wrap;
@@ -468,14 +419,8 @@ span {
 }
 
 .skills-column .title {
-    position: relative;
-    display: inline-block;
     font-size: 2.5rem;
     margin: 0 0 1.5rem;
-}
-
-.skills-column .skills-box {
-    position: relative;
 }
 
 .skills-box .skills-content {
@@ -551,12 +496,6 @@ span {
 .contact {
     min-height: auto;
     padding-bottom: 7rem;
-}
-
-.contact h2 {
-    display: inline-block;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .contact form {
@@ -636,11 +575,6 @@ span {
     background: var(--second-bg-color);
 }
 
-.footer-text,
-.footer-iconTop {
-    position: relative;
-}
-
 .footer-text p {
     font-size: 1.6rem;
 }
@@ -684,52 +618,7 @@ span {
     color: var(--main-color);
 }
 
-/* ANIMATION RELOAD AND SCROLL */
-.animate {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg-color);
-    z-index: 98;
-}
 
-.animate.home-img {
-    width: 50%;
-}
-
-.logo .animate,
-.navbar .animate,
-#menu-icon .animate,
-.home.show-animate .animate {
-    animation: showRight 1s ease forwards;
-    animation-delay: calc(.3s * var(--i) );
-}
-
-.animate.scroll {
-    transition: 1s ease;
-    transition-delay: calc(.3s / var(--i) );
-    animation: none;
-}
-
-section:nth-child(odd) .animate.scroll,
-.footer .animate.scroll {
-    background: var(--second-bg-color);
-}
-
-.education .education-box .animate.scroll {
-    width: 105%;
-}
-
-.about.show-animate .animate.scroll,
-.education.show-animate .animate.scroll,
-.skills.show-animate .animate.scroll,
-.contact.show-animate .animate.scroll,
-.footer.show-animate .animate.scroll {
-    transition-delay: calc(.3s * var(--i) );
-    width: 0;
-}
 /* BREAKPOINTS */
 @media (max-width: 1200px) {
     html {
@@ -752,12 +641,6 @@ section:nth-child(odd) .animate.scroll,
 
     .footer {
         padding: 2rem 4%;
-    }
-}
-
-@media (max-width: 850px) {
-    .animate.home-img {
-        width: 55%;
     }
 }
 
@@ -848,90 +731,8 @@ section:nth-child(odd) .animate.scroll,
     }
 
 }
-
-@media (max-width: 462px) {
-    .home-content h1 {
-        font-size: 5.2rem;
-    }
-
-    .education {
-        padding: 10rem 4% 5rem 5%;
-    }
-
-    .contact form .input-box .input-field {
-        width: 100%;
-    }
-
-    .footer {
-        flex-direction: column-reverse;
-    }
-
-    .footer p {
-        margin-top: 2rem;
-        text-align: center;
-    }
-
-}
-
-@media (max-width: 371px) {
-    .home {
-        justify-content: center;        
-    }
-
-    .home-content {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .home-content h1 {
-        font-size: 5rem;
-    }
-}
-
-/* KEYFRAMES ANIMATION */
-@keyframes homeBgText {
-    0%,
-    10%,
-    100% {
-        background-position: -33rem 0;
-    }
-
-    65%,
-    85% {
-        background-position: 0 0;
-    }
-}
-
-@keyframes homeCursorText {
-    0%,
-    10%,
-    100% {
-        width: 0;
-    }
-
-    65%,
-    78%,
-    85% {
-        width: 100%;
-        opacity: 1;
-    }
-
-    75%,
-    81% {
-        opacity: 0;
-    }
-}
-
 @keyframes aboutSpinner {
     100% {
         transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
-
-@keyframes showRight {
-    100% {
-        width: 0;
     }
 }
