--- a/styles.css
+++ b/styles.css
@@ -80,58 +80,19 @@ p{
 }
 
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2rem 9%;
+    margin: 6px;
+    padding-top: 1px;
     background: var(--second-bg-color);
 }
 
 .footer-text p {
-    font-size: 1.6rem;
-    margin-left: 150px;
+    margin: 13px;
+    font-size: 20px;
+
 }
 
-.footer-iconTop a {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: .8rem;
-    background: var(--main-color);
-    border: .2rem solid var(--main-color);
-    border-radius: .6rem;
-    z-index: 1;
-    overflow: hidden;
-}
 
-.footer-iconTop a::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: var(--second-bg-color);
-    z-index: -1;
-    transition: .5s;
-}
-
-.footer-iconTop a:hover::before {
-    width: 100%;
-}
-
-.footer-iconTop a i {
-    font-size: 2.4rem;
-    color: var(--bg-color);
-    transition: .5s;
-}
-
-.footer-iconTop a:hover i {
-    color: var(--main-color);
-}
-
+/* screen sizes */
 @media (max-width: 768px) {
     p {
     position: flex;
@@ -142,6 +103,7 @@ p{
     }
 
     .footer-text p {
+        position: flex;
         font-size: 10px;
         margin-left: 10px;
     }
@@ -162,8 +124,8 @@ p{
     }
 
     .footer-text p {
+        position: flex;
         font-size: 10px;
-        margin-left: 10px;
     }
 
     .footer p {
@@ -175,19 +137,18 @@ p{
 @media (max-width: 1200px) {
     p {
     position: flex;
-    padding-top: 10px;
+    margin-left: 5px;
+    padding-top: 1px;
     padding-left: 1px;
     color: var(--main-color);
     font-size: 10px;
     }
 
     .footer-text p {
-        font-size: 10px;
-        margin-left: 10px;
+        position: flex;
+        font-size: 9px;
+        margin-left: 5px;
     }
 
-    .footer p {
-        padding-left: 1px;
-    }
 
 }
