--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ p{
 
 .footer {
     margin: 6px;
+    margin-top: 150px;
     padding-top: 1px;
     background: var(--second-bg-color);
 }
@@ -95,24 +96,28 @@ p{
 /* screen sizes */
 @media (max-width: 768px) {
     p {
-    position: flex;
-    padding-top: 10px;
-    padding-left: 1px;
-    color: var(--main-color);
-    font-size: 10px;
-    }
-
-    .footer-text p {
-        position: flex;
+        position:flex;
+        width: 400px;
+        margin-left: 75px;
+        margin-top: 270px;
+        padding-top: 1px;
+        color: var(--main-color);
         font-size: 10px;
-        margin-left: 10px;
+    
+        }
+    
+        .footer {
+            margin-top: 30px;
+            position: static;
+        }
+        .footer-text p {
+            position: flex;
+            font-size: 9px;
+            margin-left: 5px;
+        }
+    
+    
     }
-
-    .footer p {
-        padding-left: 1px;
-    }
-
-}
 
 @media (max-width: 520px) {
     p {
@@ -136,14 +141,20 @@ p{
 
 @media (max-width: 1200px) {
     p {
-    position: flex;
-    margin-left: 5px;
+    position:flex;
+    width: 400px;
+    margin-left: 75px;
+    margin-top: 270px;
     padding-top: 1px;
-    padding-left: 1px;
     color: var(--main-color);
     font-size: 10px;
+
     }
 
+    .footer {
+        margin-top: 30px;
+        position: static;
+    }
     .footer-text p {
         position: flex;
         font-size: 9px;
