--- a/tradingcards/styles.css
+++ b/tradingcards/styles.css
@@ -1,3 +1,5 @@
+
+
 body{background-image: url("https://wallpaper.dog/large/20493136.jpg");}
 
 /* header styles */
@@ -47,7 +49,7 @@ body {
   font-size: 2.5rem;
   color: var(--main-color);
   font-weight: 600;
-
+  font-family: 'Poppins',sans-serif;
 }
 
 .navbar a {
@@ -56,8 +58,104 @@ body {
   font-weight: 500;
   margin-left: 3.5rem;
   transition: .3s;
+  font-family: 'Poppins',sans-serif;
 
 }
+.btn-box {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 34.5rem;
+  height: 5rem;
+}
+.btn-box .btn {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 100%;
+  background: var(--main-color);
+  border: .2rem solid var(--main-color);
+  border-radius: .8rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  color: var(--bg-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+.btn-box .btn:hover {
+  color: var(--main-color);
+}
+.btn-box .btn:nth-child(2) {
+  background: transparent;
+  color: var(--main-color);
+}
+.btn-box .btn:nth-child(2):hover {
+  color: var(--bg-color);
+}
+.btn-box .btn:nth-child(2)::before {
+  background: var(--main-color);
+}
+.btn-box .btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background:var(--bg-color);
+  z-index: -1;
+  transition: .5s;
+}
+.btn-box .btn:hover::before {
+  width: 100%;
+}
+.home-sci {
+  position: absolute;
+  bottom: 2rem;
+  width: 1270px;
+  display: flex;
+  justify-content: space-between;
+}
+.home-sci a {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: .2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 20px;
+  color: var(--main-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+.home-sci a:hover {
+  color: var(--text-color);
+}
+.home-sci a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--main-color);
+  z-index: -1;
+  transition: .5s;
+}
+.home-sci a:hover::before {
+  width: 100%;
+  background: var(--second-bg-color);
+}
+
+
 
 .navbar a:hover,
 .navbar a.active {
@@ -252,6 +350,9 @@ h1 {color:black;
   .logo {
     font-size: 15px;
   }
+  #menu-icon {
+    display: block;
+}
 
   .navbar {
     display: flex; /* Hide the navbar on small screens */
@@ -343,11 +444,13 @@ h1 {color:black;
   }
 
   .header {
-    padding: 10px;
+    padding: 25px;
   }
 
   .logo {
-    font-size: 25px;
+    top:-500px;
+    font-size: 35px;
+    font-family: 'Poppins',sans-serif;
   }
 
   .navbar {
@@ -356,23 +459,44 @@ h1 {color:black;
     position: absolute;
     width: 100%;
     background-color: transparent;
-    top: -517px; /* Adjust this value based on your header's height */
+    top: -500px; /* Adjust this value based on your header's height */
     left: 118%;
     z-index: 99;
   }
 
   .navbar a {
     display: block;
-    font-size: 30px;
-    margin: 520px 0;
+    font-size: 20px;
+    top:-500px;
     transform: translateX(-20rem);
     transition: .25s ease;
     transition-delay: 0s;
-}
-
-  #menu-icon {
-    display: block;
   }
+  .home-sci {
+    position: fixed;
+    margin-bottom: 1080px;
+    padding: 5px;
+    margin-left: -110px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.home-sci a {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border: .2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 30px;
+  color: var(--main-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
 
   .wrap {
     width: 20px;
@@ -386,8 +510,6 @@ h1 {color:black;
     height: 830px;
     color: var(--bg-color);
   }
-
-
 
   .wolf,
   .Eagle,
@@ -430,6 +552,8 @@ h1 {color:black;
   p {color:white;
     font-size: 35px;
   }
-  
-  
 }
+
+/* home */
+
+
