--- a/tradingcards/styles.css
+++ b/tradingcards/styles.css
@@ -317,6 +317,20 @@ h1 {color:black;
   height:20px;
 }
 
+.footer {
+  margin: 6px;
+  margin-bottom: 1150px;
+  padding-top: 1px;
+  background: var(--second-bg-color);
+}
+
+.footer-text p {
+  margin-right: 50px;
+  margin: 13px;
+  font-size: 20px;
+
+}
+
 /* Scrollbar styles */
 
 /* width */
@@ -572,8 +586,37 @@ h1 {color:black;
     background-position: 0 center;
     z-index: 100;
   }
+
+  .footer {
+    height: 55px;
+    width: 1000px;
+    margin: 0px;
+    margin-top: 10px;
+    padding-top: 35px;
+    padding-bottom: 100px;
+    background: var(--second-bg-color);
+  }
+  
+  .footer-text p {
+    margin-left: 100px;
+    font-size: 20px;
+  
+  }
 }
 
+.footer {
+  margin: 0px;
+  margin-top: 900px;
+  padding-top: 35px;
+  padding-bottom: 20px;
+  background: var(--second-bg-color);
+}
+
+.footer-text p {
+  margin-left: 100px;
+  font-size: 20px;
+
+}
 
 /* home */
 
